admin: fix horizontal overflow of combobox menu
This commit fixes an issue where the combobox menu could overflow horizontally
in certain cases when the user moved the cursor in the combobox input.

--- a/admin/src/components/base/Combobox/Combobox.css
+++ b/admin/src/components/base/Combobox/Combobox.css
@@ -17,6 +17,7 @@
 		transform 0.2s;
 	z-index: 10;
 	box-shadow: var(--sl-shadow-medium);
+	overflow-x: hidden;
 }
 
 .combobox-list--top {
